thermion_dart/lib/thermion_dart/compatibility/native/thermion_dart.g.dart


@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float, ffi.Float)>(
    symbol: 'set_camera_position',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_camera_position(
  ffi.Pointer<ffi.Void> viewer,
  double x,
  double y,
  double z,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'get_camera_position',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void get_camera_position(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float, ffi.Float, ffi.Float)>(
    symbol: 'set_camera_rotation',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_camera_rotation(
  ffi.Pointer<ffi.Void> viewer,
  double w,
  double x,
  double y,
  double z,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Float>)>(
    symbol: 'set_camera_model_matrix',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_camera_model_matrix(
  ffi.Pointer<ffi.Void> viewer,
  ffi.Pointer<ffi.Float> matrix,
);

@ffi.Native<ffi.Pointer<ffi.Double> Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'get_camera_model_matrix',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external ffi.Pointer<ffi.Double> get_camera_model_matrix(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<ffi.Pointer<ffi.Double> Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'get_camera_view_matrix',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external ffi.Pointer<ffi.Double> get_camera_view_matrix(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<ffi.Pointer<ffi.Double> Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'get_camera_projection_matrix',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external ffi.Pointer<ffi.Double> get_camera_projection_matrix(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Double>,
            ffi.Double, ffi.Double)>(
    symbol: 'set_camera_projection_matrix',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_camera_projection_matrix(
  ffi.Pointer<ffi.Void> viewer,
  ffi.Pointer<ffi.Double> matrix,
  double near,
  double far,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Double, ffi.Double)>(
    symbol: 'set_camera_culling',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_camera_culling(
  ffi.Pointer<ffi.Void> viewer,
  double near,
  double far,
);

@ffi.Native<ffi.Double Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'get_camera_culling_near',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external double get_camera_culling_near(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<ffi.Double Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'get_camera_culling_far',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external double get_camera_culling_far(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<ffi.Pointer<ffi.Double> Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'get_camera_culling_projection_matrix',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external ffi.Pointer<ffi.Double> get_camera_culling_projection_matrix(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<ffi.Pointer<ffi.Double> Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'get_camera_frustum',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external ffi.Pointer<ffi.Double> get_camera_frustum(
  ffi.Pointer<ffi.Void> viewer,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float)>(
    symbol: 'set_camera_fov',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_camera_fov(
  ffi.Pointer<ffi.Void> viewer,
  double fovInDegrees,
  double aspect,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>(
    symbol: 'set_camera_focal_length',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_camera_focal_length(
  ffi.Pointer<ffi.Void> viewer,
  double focalLength,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>(
    symbol: 'set_camera_focus_distance',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_camera_focus_distance(
  ffi.Pointer<ffi.Void> viewer,
  double focusDistance,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<ffi.Void>, _ManipulatorMode, ffi.Double,
            ffi.Double, ffi.Double)>(
    symbol: 'set_camera_manipulator_options',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_camera_manipulator_options(
  ffi.Pointer<ffi.Void> viewer,
  int mode,
  double orbitSpeedX,
  double orbitSpeedY,
  double zoomSpeed,
);

@ffi.Native<
        ffi.Int Function(
            ffi.Pointer<ffi.Void>, EntityId, ffi.Pointer<ffi.Char>)>(
    symbol: 'hide_mesh', assetId: 'package:thermion_dart/thermion_dart.dart')
external int hide_mesh(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  ffi.Pointer<ffi.Char> meshName,
);

@ffi.Native<
        ffi.Int Function(
            ffi.Pointer<ffi.Void>, EntityId, ffi.Pointer<ffi.Char>)>(
    symbol: 'reveal_mesh', assetId: 'package:thermion_dart/thermion_dart.dart')
external int reveal_mesh(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
  ffi.Pointer<ffi.Char> meshName,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>(
    symbol: 'set_post_processing',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_post_processing(
  ffi.Pointer<ffi.Void> viewer,
  bool enabled,
);

@ffi.Native<
        ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool, ffi.Bool, ffi.Bool)>(
    symbol: 'set_antialiasing',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_antialiasing(
  ffi.Pointer<ffi.Void> viewer,
  bool msaa,
  bool fxaa,
  bool taa,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(
                        EntityId entityId, ffi.Int x, ffi.Int y)>>)>(
    symbol: 'filament_pick',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void filament_pick(
  ffi.Pointer<ffi.Void> viewer,
  int x,
  int y,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(EntityId entityId, ffi.Int x, ffi.Int y)>>
      callback,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>, EntityId)>(
    symbol: 'get_name_for_entity',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external ffi.Pointer<ffi.Char> get_name_for_entity(
  ffi.Pointer<ffi.Void> sceneManager,
  int entityId,
);

@ffi.Native<
        EntityId Function(
            ffi.Pointer<ffi.Void>, EntityId, ffi.Pointer<ffi.Char>)>(
    symbol: 'find_child_entity_by_name',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external int find_child_entity_by_name(
  ffi.Pointer<ffi.Void> sceneManager,
  int parent,
  ffi.Pointer<ffi.Char> name,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Bool)>(
    symbol: 'get_entity_count',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external int get_entity_count(
  ffi.Pointer<ffi.Void> sceneManager,
  int target,
  bool renderableOnly,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>, EntityId, ffi.Bool, ffi.Pointer<EntityId>)>(
    symbol: 'get_entities', assetId: 'package:thermion_dart/thermion_dart.dart')
external void get_entities(
  ffi.Pointer<ffi.Void> sceneManager,
  int target,
  bool renderableOnly,
  ffi.Pointer<EntityId> out,
);

@ffi.Native<
        ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Void>, EntityId, ffi.Int, ffi.Bool)>(
    symbol: 'get_entity_name_at',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external ffi.Pointer<ffi.Char> get_entity_name_at(
  ffi.Pointer<ffi.Void> sceneManager,
  int target,
  int index,
  bool renderableOnly,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>(
    symbol: 'set_recording',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_recording(
  ffi.Pointer<ffi.Void> viewer,
  bool recording,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>(
    symbol: 'set_recording_output_directory',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_recording_output_directory(
  ffi.Pointer<ffi.Void> viewer,
  ffi.Pointer<ffi.Char> outputDirectory,
);

@ffi.Native<ffi.Void Function()>(
    symbol: 'ios_dummy', assetId: 'package:thermion_dart/thermion_dart.dart')
external void ios_dummy();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'thermion_flutter_free',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void thermion_flutter_free(
  ffi.Pointer<ffi.Void> ptr,
);

@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            EntityId,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(EntityId entityId1, EntityId entityId2)>>,
            ffi.Bool)>(
    symbol: 'add_collision_component',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void add_collision_component(
  ffi.Pointer<ffi.Void> sceneManager,
  int entityId,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(EntityId entityId1, EntityId entityId2)>>
      callback,
  bool affectsCollidingTransform,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId)>(
    symbol: 'remove_collision_component',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void remove_collision_component(
  ffi.Pointer<ffi.Void> sceneManager,
  int entityId,
);

@ffi.Native<ffi.Bool Function(ffi.Pointer<ffi.Void>, EntityId)>(
    symbol: 'add_animation_component',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external bool add_animation_component(
  ffi.Pointer<ffi.Void> sceneManager,
  int entityId,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId)>(
    symbol: 'remove_animation_component',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void remove_animation_component(
  ffi.Pointer<ffi.Void> sceneManager,
  int entityId,
);

@ffi.Native<
        EntityId Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Float>,
            ffi.Int,
            ffi.Pointer<ffi.Uint16>,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Char>)>(
    symbol: 'create_geometry',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external int create_geometry(
  ffi.Pointer<ffi.Void> viewer,
  ffi.Pointer<ffi.Float> vertices,
  int numVertices,
  ffi.Pointer<ffi.Uint16> indices,
  int numIndices,
  int primitiveType,
  ffi.Pointer<ffi.Char> materialPath,
);

@ffi.Native<EntityId Function(ffi.Pointer<ffi.Void>, EntityId)>(
    symbol: 'get_parent', assetId: 'package:thermion_dart/thermion_dart.dart')
external int get_parent(
  ffi.Pointer<ffi.Void> sceneManager,
  int child,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId, EntityId)>(
    symbol: 'set_parent', assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_parent(
  ffi.Pointer<ffi.Void> sceneManager,
  int child,
  int parent,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId)>(
    symbol: 'test_collisions',
    assetId: 'package:thermion_dart/thermion_dart.dart')
external void test_collisions(
  ffi.Pointer<ffi.Void> sceneManager,
  int entity,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Int)>(
    symbol: 'set_priority', assetId: 'package:thermion_dart/thermion_dart.dart')
external void set_priority(
  ffi.Pointer<ffi.Void> sceneManager,
  int entityId,
  int priority,
);
